--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>welcome to spring boot world</title>
 </head>
 <body>
 
 <div>
     <h1>Hello World !!!</h1>
+    <h2 th:text="${name}"></h2>
 </div>
 
 </body>
